# shadowarc

./: .gitignore  CMakeLists.txt  Makefile  NOTES.txt  README.md  main.c  shadowarc.nimble
.github/workflows/: codeql.yml
src/: config.nim  consts.nim  filesystem.nim  shadowarc.nim
